<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@color/white">

    <TextView
        android:id="@+id/SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="Sign Up"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SignUp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="#45D9D9D9"
            android:hint="@string/first_name"
            android:padding="15dp"
            android:textColorHint="#60000000"
            android:textSize="20dp"></EditText>

        <EditText
            android:id="@+id/Lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="#45D9D9D9"
            android:hint="@string/last_name"
            android:padding="15dp"
            android:textColorHint="#60000000"
            android:textSize="20dp"></EditText>

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="#45D9D9D9"
            android:hint="@string/email_address"
            android:padding="15dp"
            android:textColorHint="#60000000"
            android:textSize="20dp"></EditText>

        <EditText
            android:id="@+id/Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="#45D9D9D9"
            android:hint="@string/password"
            android:padding="15dp"
            android:textColorHint="#60000000"
            android:textSize="20dp"></EditText>

        <EditText
            android:id="@+id/Cpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="#45D9D9D9"
            android:hint="@string/confirm_password"
            android:padding="15dp"
            android:textColorHint="#60000000"
            android:textSize="20dp"></EditText>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignUp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/black"
        android:padding="8dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20dp"></com.google.android.material.button.MaterialButton>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textColor="@color/black">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SLogin"
            android:text="@string/login"
            android:textColor="@color/black">
        </TextView>
    </LinearLayout>
</RelativeLayout>
