<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:background="@color/white">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="100dp"
        app:srcCompat="@drawable/lock"></ImageView>

    <TextView
        android:id="@+id/Fpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView3"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"></TextView>

    <TextView
        android:id="@+id/Sug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Fpass"
        android:gravity="center"
        android:text="@string/enter_your_email_to_reset_password"
        android:textColor="@color/black"
        android:textSize="13dp"></TextView>

    <EditText
        android:id="@+id/Femail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Sug"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="#45D9D9D9"
        android:drawableLeft="@drawable/ic_mail__1_"
        android:drawablePadding="10dp"
        android:hint="@string/email_address"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#60000000"
        android:textSize="20dp"></EditText>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Resetpass"
        android:layout_below="@id/Femail"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:padding="15dp"
        android:backgroundTint="@color/black"
        android:layout_marginTop="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">
    </com.google.android.material.button.MaterialButton>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/black">
        </TextView>
    </LinearLayout>
</RelativeLayout>