<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn"
    android:background="@color/white">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="336dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="-63dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="457dp"
        app:srcCompat="@drawable/loginimg" />

    <TextView
        android:id="@+id/LogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LogIn"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="#45D9D9D9"
        android:drawableLeft="@drawable/ic_mail__1_"
        android:drawablePadding="10dp"
        android:hint="@string/email_address"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#60000000"
        android:textSize="20dp"></EditText>

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EmailAddress"
        android:layout_marginStart="30dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:background="#45D9D9D9"
        android:drawableLeft="@drawable/ic_lock__1_"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#60000000"
        android:textSize="20dp"></EditText>

    <TextView
        android:id="@+id/Forgorpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_marginStart="230dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"></TextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/LogInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="20dp"></com.google.android.material.button.MaterialButton>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LogInBtn"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/google"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:src="@drawable/ic_google"></ImageButton>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:src="@drawable/ic_facebook"></ImageButton>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:src="@drawable/ic_twitter"></ImageButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"></TextView>

        <TextView
            android:id="@+id/signu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/black"></TextView>
    </LinearLayout>
</RelativeLayout>